--- a/code/visualization.Rmd
+++ b/code/visualization.Rmd
@@ -238,7 +238,8 @@ plot1_data <- plot1_data %>%
            compound == 'NETFOSAA' ~ 'NEtFOSAA',
            compound == 'PFDOA' ~ 'PFDoA',
            compound == 'PFHPA' ~ 'PFHpA',
-           compound == 'PFHXA' ~ 'PFHxS',
+           compound == 'PFHXA' ~ 'PFHxA',
+           compound == 'PFHXS' ~ 'PFHxS',
            compound == 'PFTRDA' ~ 'PFTrDA',
            compound == 'PFUNA' ~ 'PFUnA',
            TRUE ~ compound))
@@ -250,21 +251,21 @@ toxicity_final <- toxicity_final %>%
            compound == 'NETFOSAA' ~ 'NEtFOSAA',
            compound == 'PFDOA' ~ 'PFDoA',
            compound == 'PFHPA' ~ 'PFHpA',
-           compound == 'PFHXA' ~ 'PFHxS',
+           compound == 'PFHXA' ~ 'PFHxA',
+           compound == 'PFHXS' ~ 'PFHxS',
            compound == 'PFTRDA' ~ 'PFTrDA',
            compound == 'PFUNA' ~ 'PFUnA',
            TRUE ~ compound))
 
-toxicity_colors <- c(')
 ``` 
 
 ```{r}
 ggplot() +
   geom_boxplot(data = plot1_data, aes(x = compound, y = concentration, fill = source), 
                outlier.shape = 4, position = position_dodge2(preserve = "single"), width = .75) +
-  geom_point(data = toxicity_final, aes(x = compound, y = concentration, color = endpoint), shape = 1, size = 2) +
+  geom_point(data = toxicity_final, aes(x = compound, y = concentration, color = endpoint), shape = 1, size = 3, stroke = 0.75) +
   geom_errorbar(data = toxicity_final, aes(x = compound, ymin = concentration - sd, ymax = concentration + sd, color = endpoint), width = 0) +
-  scale_color_manual(values = c('black', 'darkorange1')) +
+  scale_color_manual(values = c('black', "#E69F00", "#56B4E9")) +
   theme_minimal() +
   scale_y_log10(breaks = scales::trans_breaks("log10", function(x) 10^x),
               labels = scales::trans_format("log10", scales::math_format(10^.x))) +
@@ -289,7 +290,7 @@ ggplot() +
                outlier.shape = 4, position = position_dodge2(preserve = "single"), width = .75) +
   geom_point(data = toxicity_final_1, aes(x = compound, y = concentration, color = endpoint), shape = 1, size = 2) +
   geom_errorbar(data = toxicity_final_1, aes(x = compound, ymin = concentration - sd, ymax = concentration + sd, color = endpoint), width = 0) +
-  scale_color_manual(values = c('black', 'darkorange1')) +
+  scale_color_manual(values = c('black', "#E69F00")) +
   theme_minimal() +
   scale_y_log10(breaks = scales::trans_breaks("log10", function(x) 10^x),
               labels = scales::trans_format("log10", scales::math_format(10^.x))) +
