--- a/code/visualization.Rmd
+++ b/code/visualization.Rmd
@@ -285,9 +285,9 @@ ggplot() +
         legend.background = element_rect(fill = "white", color = "black"),
         legend.text = element_text(size = 8),
         legend.title = element_blank(),
-        axis.line = element_line(colour = "black"),
         panel.grid.major = element_blank(), 
-        panel.grid.minor = element_blank())
+        panel.grid.minor = element_blank(),
+        panel.background = element_rect(colour = "black", size = 0.5 , fill= NA))
 ```
 
 ### Plot 2 - No LOEC
